create costum animated buttons and add more animations to navbar

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.1.2",
     "@next/font": "^14.2.15",
     "gsap": "^3.12.7",
+    "hamburger-react": "^2.5.2",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
