--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-infinite-logo-slider": "^1.1.4",
+    "react-multi-carousel": "^2.8.6",
     "react-responsive": "^10.0.0"
   },
   "devDependencies": {
